fix scrollbar and size issue

--- a/public/style.css
+++ b/public/style.css
@@ -5,13 +5,14 @@
 /* full page */
 html{
     height: 100%;
+    
 }
 
 .login_bg{
     background-image: url("asset/bg.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 1950px;
+    background-size: 100%;
     background-position: center;
 }
 
@@ -19,6 +20,8 @@ html{
 #blank{
     width: 3%;
     height: 100%;
+    position: relative;
+    left: 97%;
 }
 
 /* control the NAME logo */
@@ -29,12 +32,12 @@ html{
 }
 
 /* control the sprout logo */
-.logo{
+/* .logo{
     padding-top: 10%;
     padding-bottom: 10%;
     width:12%;
     height: 50%;
-}
+} */
 
 /* control the body */
 body{
@@ -45,6 +48,7 @@ body{
 
 div{
     padding: 1%;
+
 }
 
 /* controls the box in main  */
@@ -53,10 +57,11 @@ div{
     justify-items: center;
     align-items: center;
     background-color: white;
-    width: 35%;
+    width: 25%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 21.5%;
+    margin-bottom: 25%;
+    margin-top: 10%;
     border-radius: 1%;
 
 }
@@ -66,6 +71,7 @@ div{
     justify-items: center;
     align-items: center;
     margin-top: 10%; 
+    
 }
 
 .form-control {
@@ -115,7 +121,7 @@ div{
     display: grid;
     justify-items: center;
     align-items: center;
-    width:100%;    
+    width:75%;    
     margin-top: 10%;
     
 }
@@ -224,7 +230,8 @@ div{
     margin-left: auto;
     margin-right: auto;
     border-radius: 1%;
-    margin-top: -2.5%;
+    margin-top: 0%;
+    
 }
 
 /* control the form in new user */
@@ -314,9 +321,8 @@ input{
     border-radius: 5%;
     outline: none;
     border: none;
-    
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 /* centers the dropdown list */
@@ -350,8 +356,9 @@ input{
     width: 25%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5%;
     border-radius: 1%;
+    position: relative;
+    margin-top: 1%;
 
 }
 
@@ -362,7 +369,7 @@ input{
     align-items: center;
     font-size: 200%;
     height: 10%;
-    width: 50%;
+    width: 40%;
     border-radius: 1%; 
     margin-bottom: -4%;
     outline: 0;
@@ -386,6 +393,7 @@ input{
     display: grid;
     justify-items: center;
     align-items: center;
+
 }
 
 /* color of the text box when not in use*/
